--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@ databaseConfig.js
 domain.js
 gmailCredentials.json
 googleSheetsCredentials.json
+googleSheetsCredentials.js
 mercadoPagoCredentials.js
-videos
 
